added basic layout 1.0

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -10,8 +10,11 @@
 
     <ItemGroup>
       <Folder Include="Resources\" />
-      <Folder Include="ViewModels\" />
       <Folder Include="Views\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BL\BL.csproj" />
     </ItemGroup>
 
 </Project>
