--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -2,10 +2,10 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net9.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
+        <TargetFrameworks>net8.0;net8.0-windows</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
