--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -2,31 +2,14 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
+        <TargetFramework>net8.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
-        <TargetFrameworks>net8.0;net8.0-windows</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Views\" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\BL\BL.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Page Update="Resources\UserControlls\ConfirmCancelButtons.xaml">
-        <Generator>MSBuild:Compile</Generator>
-        <XamlRuntime>Wpf</XamlRuntime>
-        <SubType>Designer</SubType>
-      </Page>
-      <Page Update="Resources\UserControlls\TourFormControl.xaml">
-        <Generator>MSBuild:Compile</Generator>
-        <XamlRuntime>Wpf</XamlRuntime>
-        <SubType>Designer</SubType>
-      </Page>
     </ItemGroup>
 
 </Project>
