--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BL\BL.csproj" />
+      <ProjectReference Include="..\DAL\DAL.csproj" />
     </ItemGroup>
 
 </Project>
