--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -8,15 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Logging\" />
-      <Folder Include="Reports\" />
-      <Folder Include="Services\" />
+      <ProjectReference Include="..\DAL\DAL.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+      <PackageReference Include="log4net" Version="3.1.0" />
     </ItemGroup>
 
 </Project>
