--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -1,5 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=tourplanner;Username=touruser;Password=tourpass"
+  },
+  "ReportSettings": {
+    "OutputDirectory": "Reports"  
   }
 }
