--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="log4net" Version="3.1.0" />
+      <PackageReference Include="PuppeteerSharp" Version="20.2.0" />
       <PackageReference Include="QuestPDF" Version="2025.5.1" />
     </ItemGroup>
 
