--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -3,6 +3,9 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=tourplanner;Username=touruser;Password=tourpass"
   },
   "ReportSettings": {
-    "OutputDirectory": "Reports"  
+    "OutputDirectory": "Reports"
+  },
+  "TourImages": {
+    "OutputFolder": "TourImages"
   }
 }
