Change create tour

--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -6,6 +6,6 @@
     "OutputDirectory": "Reports"
   },
   "TourImages": {
-    "OutputFolder": "TourImages"
+    "OutputDirectory": "TourImages"
   }
 }
