--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -26,7 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="DAL\" />
+      <Folder Include="DAL\Repositories\" />
       <Folder Include="UI\" />
     </ItemGroup>
 
